--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -32,5 +32,7 @@
     <footer>
         <p>&copy; 2025 Virtual Dragon Boat Coach. All rights reserved.</p>
     </footer>
+    
+    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
 </body>
 </html>
