--- a/src/templates/feedback.html
+++ b/src/templates/feedback.html
@@ -282,21 +282,6 @@
     {% endif %}
 </section>
 
-<div class="panel coach-feedback-panel">
-    <div class="panel-header">
-        <h2><i class="fas fa-comment-dots"></i> Coach's Feedback</h2>
-    </div>
-    <div class="panel-body">
-        {% if coach_feedback %}
-            <div class="coach-feedback">
-                <p>{{ coach_feedback }}</p>
-            </div>
-        {% else %}
-            <p class="no-feedback">Coach has not given feedback yet.</p>
-        {% endif %}
-    </div>
-</div>
-
 <div class="dashboard-container">
     <!-- Control Panel -->
     <div class="panel control-panel">
@@ -311,46 +296,25 @@
                         <div class="input-button-group">
                             <select id="angle-name" name="angle_name" required>
                                 <option value="">-- Select an angle --</option>
-                                <optgroup label="Pelvis">
-                                    <option value="pelvis_tilt">Pelvis Tilt</option>
-                                    <option value="pelvis_list">Pelvis List</option>
-                                    <option value="pelvis_rotation">Pelvis Rotation</option>
-                                    <option value="pelvis_tx">Pelvis TX</option>
-                                    <option value="pelvis_ty">Pelvis TY</option>
-                                    <option value="pelvis_tz">Pelvis TZ</option>
+                                <optgroup label="Right">
+                                    <option value="arm_flex_r">Right Arm Flexion</option>
+                                    <option value="arm_add_r">Right Arm Adduction</option>
+                                    <option value="arm_rot_r">Right Arm Rotation</option>
+                                    <option value="elbow_flex_r">Right Elbow Flexion</option>
+                                    <option value="hip_flexion_r">Right Hip Flexion</option>
+                                    <option value="knee_angle_r">Right Knee Angle</option>
                                 </optgroup>
-                                <optgroup label="Right Side">
-                                    <option value="hip_flexion_r">Hip Flexion Right</option>
-                                    <option value="hip_adduction_r">Hip Adduction Right</option>
-                                    <option value="hip_rotation_r">Hip Rotation Right</option>
-                                    <option value="knee_angle_r">Knee Angle Right</option>
-                                    <option value="ankle_angle_r">Ankle Angle Right</option>
-                                    <option value="subtalar_angle_r">Subtalar Angle Right</option>
-                                    <option value="mtp_angle_r">MTP Angle Right</option>
-                                    <option value="arm_flex_r">Arm Flex Right</option>
-                                    <option value="arm_add_r">Arm Add Right</option>
-                                    <option value="arm_rot_r">Arm Rot Right</option>
-                                    <option value="elbow_flex_r">Elbow Flex Right</option>
-                                    <option value="pro_sup_r">Pro Sup Right</option>
+                                <optgroup label="Left">
+                                    <option value="arm_flex_l">Left Arm Flexion</option>
+                                    <option value="arm_add_l">Left Arm Adduction</option>
+                                    <option value="arm_rot_l">Left Arm Rotation</option>
+                                    <option value="elbow_flex_l">Left Elbow Flexion</option>
+                                    <option value="hip_flexion_l">Left Hip Flexion</option>
+                                    <option value="knee_angle_l">Left Knee Angle</option>
                                 </optgroup>
-                                <optgroup label="Left Side">
-                                    <option value="hip_flexion_l">Hip Flexion Left</option>
-                                    <option value="hip_adduction_l">Hip Adduction Left</option>
-                                    <option value="hip_rotation_l">Hip Rotation Left</option>
-                                    <option value="knee_angle_l">Knee Angle Left</option>
-                                    <option value="ankle_angle_l">Ankle Angle Left</option>
-                                    <option value="subtalar_angle_l">Subtalar Angle Left</option>
-                                    <option value="mtp_angle_l">MTP Angle Left</option>
-                                    <option value="arm_flex_l">Arm Flex Left</option>
-                                    <option value="arm_add_l">Arm Add Left</option>
-                                    <option value="arm_rot_l">Arm Rot Left</option>
-                                    <option value="elbow_flex_l">Elbow Flex Left</option>
-                                    <option value="pro_sup_l">Pro Sup Left</option>
-                                </optgroup>
-                                <optgroup label="Spine">
+                                <optgroup label="Trunk">
                                     <option value="lumbar_extension">Lumbar Extension</option>
                                     <option value="lumbar_bending">Lumbar Bending</option>
-                                    <option value="lumbar_rotation">Lumbar Rotation</option>
                                 </optgroup>
                             </select>
                             <button type="submit" class="btn btn-primary control-btn">
