--- a/src/templates/resources.html
+++ b/src/templates/resources.html
@@ -20,6 +20,7 @@
                 <li><a href="#section3-3">Coach Page</a></li>
             </ul></li>
             <li><a href="#section4">Video Walkthrough</a></li>
+            <li><a href="#section5">VDBC Privacy Policy</a></li>
         </ul>
     </nav>
 
@@ -123,6 +124,12 @@
             <h2>Video Walkthrough</h2>
             <p>This video provides a complete and detailed walkthrough of the VDBC system. !!!!!!!!!!!!!!!Remember to replace the link with our own video!!!!!!!!!!!!!!!!</p>
             <iframe width="420" height="315" src="https://www.youtube.com/embed/h4jaSZwcrm8"></iframe>
+        </section>
+
+        <section id="section5">
+            <h2>VDBC Privacy Policy</h2>
+            <p>Please carefully read through the following privacy policy of VDBC. By using VDBC, we assume you agree with our privacy policy. If you have question or concerns, please email us at <strong>email@email.com</strong></p>
+            <p><a href="https://app.opencap.ai/login" target="_blank">VDBC Privacy Policy</a></p>
         </section>
     </main>
 </div>
