--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -25,6 +25,10 @@
         </p>
 
         <h2>How Does VDBC Work</h2>
+        <figure style="max-width: 80%; margin: 0 auto; text-align: center;">
+            <img src="{{ url_for('static', filename='Flowchart/VDBC_flow.png') }}" style="width: 100%; height: auto;">
+            <figcaption style="margin-top: 5px;"><strong>Figure.1</strong> A high level overview of how VDBC work.</figcaption>
+        </figure>
         <p>
             VDBC consists of two main components: the motion tracking component and the performance (technique) analysis component. The motion tracking component 
             captures data from a paddling practice session, while the performance analysis component evaluates the session and provides feedback.
@@ -41,7 +45,7 @@
         <p>
             For more details on using VDBC, please visit the <a href="/resources">Resource page</a> for step by step guide.
         </p>
-
+        
         <h2>VDBC Development Team</h2>
         <p>
             2025 IBEHS 5P06A Team 25
