--- a/src/templates/resources.html
+++ b/src/templates/resources.html
@@ -36,11 +36,16 @@
                 <li>Checkerboard for calibration. A picture of a checkerboard on a tablet or laptop will suffice as long as the screen does not produce any glare or reflections. A standard checkerboard can be found here: <a href="https://cdn.prod.website-files.com/62468717bed6b421c89bbf36/6258dd3518244b061c1b02f5_Checkerboard_4x5_35mm.pdf" target="_blank">Checkerboard</a></li>
                 <li>Laptop with internet connection capabilities.</li>
             </ul>
+            <br>
             <p>**Note: Recording sessions should be performed with at least two people: one will be the “paddler” who will have their technique assessed and the other will be responsible for operating OpenCap.</p>
         </section>
+        <br>
+        <hr>
 
         <section id="section2">
             <h2>Recording A Session with OpenCap</h2>
+            <p>The following video provides a complete and detailed walkthrough of recording an OpenCap session for VDBC system.</p>
+            <iframe width="800" height="450" src="https://www.youtube.com/embed/oyOx-881uQs"></iframe>
             <section id="section2-1">
                 <h3>Set Up</h3>
                 <ol class="resource_list">
@@ -57,8 +62,6 @@
 
             <section id="section2-2">
                 <h3>Calibraiton</h3>
-                <p>Following video is a general OpenCap calibration tutorial:</p>
-                <iframe width="420" height="315" src="https://www.youtube.com/embed/T6TkFLEfQ0Y"></iframe>
                 <ol class="resource_list">
                     <li>Place the checkerboard in the field of view of both cameras. This can be on the seat of the ergometer and facing directly forwards.</li>
                         <ul class="resource_list"><li>Note: The checkerboard must be placed horizontally and should NOT point directly at any of the cameras.</li></ul>
@@ -72,8 +75,6 @@
 
             <section id="section2-3">
                 <h3>Recording</h3>
-                <p>Following video is a general OpenCap recording tutorial:</p>
-                <iframe width="420" height="315" src="https://www.youtube.com/embed/h4jaSZwcrm8"></iframe>
                 <ol class="resource_list">
                     <li>Enter the paddler’s basic information including height (m), weight (kg), gender and an identifier for this paddler.</li>
                     <li>In the ‘Data sharing agreement’ section, select any of the options in the dropdown according to your preference.</li>
@@ -88,6 +89,8 @@
                 </ol>
             </section>
         </section>
+        <br>
+        <hr>
 
         <section id="section3">
             <h2>VDBC Website</h2>
@@ -119,12 +122,16 @@
                 </ol>
             </section>
         </section>
+        <br>
+        <hr>
 
         <section id="section4">
             <h2>Video Walkthrough</h2>
-            <p>This video provides a complete and detailed walkthrough of the VDBC system. !!!!!!!!!!!!!!!Remember to replace the link with our own video!!!!!!!!!!!!!!!!</p>
-            <iframe width="420" height="315" src="https://www.youtube.com/embed/h4jaSZwcrm8"></iframe>
+            <p>This video provides a complete and detailed walkthrough of the VDBC system.</p>
+            <iframe width="800" height="450" src="https://www.youtube.com/embed/oyOx-881uQs"></iframe>
         </section>
+        <br>
+        <hr>
 
         <section id="section5">
             <h2>VDBC Privacy Policy</h2>
