privacy policy added

--- a/src/templates/resources.html
+++ b/src/templates/resources.html
@@ -41,6 +41,7 @@
         </section>
         <br>
         <hr>
+        <br>
 
         <section id="section2">
             <h2>Recording A Session with OpenCap</h2>
@@ -91,6 +92,7 @@
         </section>
         <br>
         <hr>
+        <br>
 
         <section id="section3">
             <h2>VDBC Website</h2>
@@ -124,6 +126,7 @@
         </section>
         <br>
         <hr>
+        <br>
 
         <section id="section4">
             <h2>Video Walkthrough</h2>
@@ -132,11 +135,12 @@
         </section>
         <br>
         <hr>
+        <br>
 
         <section id="section5">
             <h2>VDBC Privacy Policy</h2>
             <p>Please carefully read through the following privacy policy of VDBC. By using VDBC, we assume you agree with our privacy policy. If you have question or concerns, please email us at <strong>email@email.com</strong></p>
-            <p><a href="https://app.opencap.ai/login" target="_blank">VDBC Privacy Policy</a></p>
+            <p><a href="/privacy_policy" target="_blank">VDBC Privacy Policy</a></p>
         </section>
     </main>
 </div>
